--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.datasource.url=jdbc:mysql://localhost:3307/db_teacherBot
+spring.datasource.username=user
+spring.datasource.password=password
 
