--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: '3.3'
 services:
   database:
     image: mysql:5.7
-    container_name: 'mysql'
+    container_name: 'teacherBot'
     restart: always
     environment:
       MYSQL_DATABASE: 'db_teacherBot'
       MYSQL_USER: 'user'
       MYSQL_PASSWORD: 'password'
       MYSQL_ROOT_PASSWORD: 'password'
-      MYSQL_TCP_PORT: 3307
+      MYSQL_TCP_PORT: 3310
     ports:
-      - '3307:3307'
+      - '3310:3310'
     volumes:
       - my-db:/var/lib/mysql
     command:
